chore: update gitignore for sensitive and generated files
Added patterns to ignore log files, backup directories, and local configuration files to prevent sensitive or user-specific data from being committed. This change helps maintain security and keeps the repository clean of generated artifacts.

--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,12 @@ ENV/
 *.swp
 *.swo
 
+# ObsyncIt specific
+.logs/
+logs/
+.backups/
+config.toml
+
 # Project specific
 .mise.toml
 .python-version
