--- a/pytest.ini
+++ b/pytest.ini
@@ -11,6 +11,16 @@ addopts =
     --cov-report=term-missing
     --cov-report=html
     --no-cov-on-fail
+    --ignore=logs/
+
+# Directories to exclude from test collection
+norecursedirs = 
+    logs/*
+    .git
+    .venv
+    __pycache__
+    .pytest_cache
+    htmlcov
 
 # Logging configuration
 log_cli = True
