--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,20 @@
+# Core dependencies
 rich>=13.7.0
 loguru>=0.7.2
 tomli>=2.0.1
 pydantic>=2.6.1
-jsonschema>=4.21.1 
+jsonschema>=4.21.1
 
-# Testing dependencies
+# Development dependencies
 pytest>=8.0.0
-pytest-cov>=4.1.0  # For code coverage reporting
-pytest-mock>=3.12.0  # For mocking
-pytest-asyncio>=0.23.5  # For async test support 
+pytest-cov>=4.1.0
+pytest-mock>=3.12.0
+pytest-asyncio>=0.23.5
+mypy>=1.8.0
+ruff>=0.1.14
+black>=24.1.0
+pre-commit>=3.6.0
+
+# Type stubs for better type checking
+types-jsonschema>=4.21.0.0
+types-setuptools>=69.0.0.0
