--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ mypy>=1.8.0
 ruff>=0.1.14
 black>=24.1.0
 pre-commit>=3.6.0
+reloadium>=1.5.1
 
 # Type stubs for better type checking
 types-jsonschema>=4.21.0.0
