--- a/pytest.ini
+++ b/pytest.ini
@@ -1,12 +1,29 @@
 [pytest]
+# Test selection
+addopts = -ra -q
 testpaths = tests
-log_cli = true
+python_files = test_*.py
+
+# Logging settings
+log_cli = 1
 log_cli_level = INFO
-log_cli_format = %(asctime)s | %(levelname)s | %(message)s
-log_cli_date_format = %Y-%m-%dT%H:%M:%S.%f%z
+log_cli_format = %(message)s
+
+log_file = logs/test_logs_{time:YYYY-MM-DD_HH-mm}_{name}.log.txt
+log_file_level = DEBUG
+log_file_format = %(message)s
+log_file_date_format = %Y-%m-%d %H:%M:%S
+
+# Configuration
+asyncio_mode = strict
 asyncio_default_fixture_loop_scope = function
+
+# Warnings filter
 filterwarnings =
+    # Ignore pytest warnings about directory cleanup
     ignore::pytest.PytestWarning
-    ignore::pytest.PytestDeprecationWarning
-    ignore::PytestWarning
-addopts = -p no:warnings
+    ignore:.*error removing.*:pytest.PytestWarning
+    ignore:.*PytestDeprecationWarning.*The configuration option.*:DeprecationWarning
+    # General warnings that are okay to ignore
+    ignore::DeprecationWarning:pkg_resources._vendor.pyparsing
+    ignore::DeprecationWarning:asyncio
