--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,53 +1,33 @@
 [build-system]
-requires = ["setuptools>=69.0.3"]
+requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
 build-backend = "setuptools.build_meta"
 
-[project]
-name = "obsyncit"
-version = "0.1.0"
-description = "Sync Obsidian vault settings between different vaults"
-requires-python = ">=3.8"
-license = {text = "MIT"}
-readme = "README.md"
-authors = [{name = "Mike Earley"}]
-
-[tool.ruff]
-line-length = 100
-target-version = "py38"
-
-[tool.ruff.lint]
-select = [
-    "E",  # pycodestyle errors
-    "W",  # pycodestyle warnings
-    "F",  # pyflakes
-    "I",  # isort
-    "B",  # flake8-bugbear
-    "C4", # flake8-comprehensions
-    "UP", # pyupgrade
-]
-ignore = [
-    "E501",  # line too long (handled by black)
-]
-
-[tool.ruff.format]
-quote-style = "double"
-indent-style = "space"
-skip-magic-trailing-comma = false
-line-ending = "auto"
-
-[tool.ruff.isort]
-known-first-party = ["obsyncit"]
-combine-as-imports = true
-
-[tool.black]
-line-length = 100
-target-version = ['py38']
-include = '\.pyi?$'
+[tool.setuptools_scm]
+write_to = "obsyncit/_version.py"
 
 [tool.pytest.ini_options]
-minversion = "8.0"
-addopts = "-ra -q --cov=obsyncit --cov-report=term-missing"
-testpaths = ["tests"]
+minversion = "6.0"
+addopts = "-ra -q --cov=obsyncit --cov-report=xml --cov-report=html"
+testpaths = [
+    "tests",
+]
+python_files = ["test_*.py", "*_test.py"]
+python_classes = ["Test", "Describe"]
+python_functions = ["test_*", "it_*", "they_*"]
+
+[tool.coverage.run]
+branch = true
+source = ["obsyncit"]
+
+[tool.coverage.report]
+exclude_lines = [
+    "pragma: no cover",
+    "def __repr__",
+    "raise NotImplementedError",
+    "if __name__ == .__main__.:",
+    "pass",
+    "raise ImportError",
+]
 
 [tool.mypy]
 python_version = "3.8"
@@ -67,69 +47,69 @@ strict_equality = true
 [[tool.mypy.overrides]]
 module = "tests.*"
 disallow_untyped_defs = false
+disallow_incomplete_defs = false
 
-[tool.pylint]
-max-line-length = 100
-disable = [
-    "C0111",  # missing-docstring
-    "C0103",  # invalid-name
-    "C0114",  # missing-module-docstring (covered by type hints)
-    "R0903",  # too-few-public-methods
-    "R0913",  # too-many-arguments
-    "W0511",  # fixme (TODO comments)
+[tool.black]
+line-length = 88
+target-version = ['py38']
+include = '\.pyi?$'
+
+[tool.isort]
+profile = "black"
+multi_line_output = 3
+include_trailing_comma = true
+force_grid_wrap = 0
+use_parentheses = true
+line_length = 88
+
+[tool.ruff]
+line-length = 88
+target-version = "py38"
+select = [
+    "E",   # pycodestyle errors
+    "W",   # pycodestyle warnings
+    "F",   # pyflakes
+    "I",   # isort
+    "C",   # flake8-comprehensions
+    "B",   # flake8-bugbear
+    "A",   # flake8-builtins
+    "COM", # flake8-commas
+    "C90", # mccabe
+    "N",   # pep8-naming
+    "UP",  # pyupgrade
+    "YTT", # flake8-2020
+    "S",   # flake8-bandit
 ]
-extension-pkg-allow-list = [
-    "pydantic"
-]
-good-names = [
-    "i",
-    "j",
-    "k",
-    "ex",
-    "Run",
-    "_",
-    "fp",
-    "id"
-]
+ignore = []
+
+[tool.ruff.mccabe]
+max-complexity = 10
+
+[tool.ruff.per-file-ignores]
+"tests/*" = ["S101"]  # Allow assert statements in tests
+
+[tool.pylint.master]
+init-hook='import sys; sys.path.append(".")'
+ignore=".git"
+ignore-patterns="test_.*?py"
 
 [tool.pylint.messages_control]
 disable = [
-    "C0111",  # missing-docstring
-    "C0103",  # invalid-name
-    "C0114",  # missing-module-docstring
-    "R0903",  # too-few-public-methods
-    "R0913",  # too-many-arguments
+    "C0111",  # Missing docstring
+    "C0103",  # Invalid name
+    "C0330",  # Wrong hanging indent
+    "C0326",  # Bad whitespace
+    "W0621",  # Redefining name from outer scope
+    "W0511",  # TODO comments
+    "R0903",  # Too few public methods
+    "R0913",  # Too many arguments
+    "R0914",  # Too many local variables
 ]
 
 [tool.pylint.format]
-max-line-length = 100
+max-line-length = 88
 
-[tool.pylint.basic]
-good-names = ["i", "j", "k", "ex", "Run", "_", "fp", "id"]
-
-[tool.pylint.design]
-max-args = 8
-max-attributes = 8
-max-bool-expr = 5
-max-branches = 12
-max-locals = 15
-max-parents = 7
-max-public-methods = 20
-max-returns = 6
-max-statements = 50
-min-public-methods = 1
-
-[tool.coverage.run]
-source = ["obsyncit"]
-omit = ["tests/*", "setup.py"]
-
-[tool.coverage.report]
-exclude_lines = [
-    "pragma: no cover",
-    "def __repr__",
-    "if self.debug:",
-    "raise NotImplementedError",
-    "if __name__ == .__main__.:",
-    "pass",
-    "raise ImportError",
-]
+[tool.pylint.reports]
+output-format = "colorized"
+reports = "no"
+score = "yes"
